<resources>
    <!--String IMC APP -->
    <string name="app_name">AndroidMaster</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="age">Edad</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado del cálculo</string>
    <string name="re_calculate">Re-Calcular</string>

    <string name="error">Error</string>
    <!-- Strings para los resultados-->
    <string name="infrapeso">Infrapeso</string>
    <string name="infoInfrapeso">Se encuentra dentro del rango de peso insuficiente</string>

    <string name="normal">Normal</string>
    <string name="infoNormal">Se encuentra dentro del rango de peso normal o saludable</string>

    <string name="sobrepeso">Sobrepeso</string>
    <string name="infoSobrepeso">Se encuentra dentro del rango de sobrepeso</string>

    <string name="obesidad">Obesidad</string>
    <string name="infoObesidad">Se encuentra dentro del rango de obesidad</string>

    <!--String TO-DO APP -->
    <string name="To_Do_title">To-Do App</string>
    <string name="To_Do_category">Categorias</string>
    <string name="business">Negocios</string>
    <string name="personal">Personal</string>
    <string name="other">Otros</string>
    <string name="To_Do_tasks">Tareas</string>
    <string name="To_Do_add_task_dialog">Añade tu tarea</string>
    <string name="To_Do_add_task_dialog_button">Crear tarea</string>

    <!--Strings super hero app -->
    <string name="stat_intelligence">Intelligence</string>
    <string name="stat_strength">Strength</string>
    <string name="stat_speed">Speed</string>
    <string name="stat_durability">Durability</string>
    <string name="stat_power">Power</string>
    <string name="stat_combat">Combat</string>

    <!--Strings settings app -->
    <string name="dark_mode_title">Modo oscuro</string>
    <string name="dark_mode_description">Activa el modo oscuro para un cambio visual</string>
    <string name="bluetootho_title">Bluetooth</string>
    <string name="bluetootho_description">Conecta periféricos sin cables</string>
    <string name="volumen_title">Volumen</string>
    <string name="vibration_title">Vibrar en las llamadas</string>


</resources>