<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".superheroapp.DetailSuperHeroActivity">

    <ImageView
        android:id="@+id/ivSuperHeroPhoto"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="220dp"
        android:elevation="8dp"
        app:cardCornerRadius="42dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/tvSHName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="TEXTO DE PRUEBA" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="32dp"
                android:background="@color/stats"
                android:gravity="bottom"
                android:orientation="horizontal">
                <!-- Para  que la grafica vaya de abajo a arriba ponemos en gravity la opcion bottom-->

                <!--Para que se reparta el espacio entre las view dentro del linear layout, utilizamos
                el atributo weight para darle un peso-->

                <View
                    android:id="@+id/viewItelligence"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_intelligence" />

                <View
                    android:id="@+id/viewStrength"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_strength" />

                <View
                    android:id="@+id/viewSpeed"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_speed" />

                <View
                    android:id="@+id/viewDurability"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_durability" />

                <View
                    android:id="@+id/viewPower"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_power" />

                <View
                    android:id="@+id/viewCombat"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_weight="1"
                    android:background="@color/superhero_combat" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginTop="0dp"
                android:background="@color/stats"
                android:gravity="bottom"
                android:orientation="horizontal">
                <!-- Para  que la grafica vaya de abajo a arriba ponemos en gravity la opcion bottom-->

                <!--Para que se reparta el espacio entre las view dentro del linear layout, utilizamos
                el atributo weight para darle un peso-->

                <!-- Como todos los textos tienen mucho en comun salvo el texto, creamos un estilo comun-->

                <TextView
                    android:text="@string/stat_intelligence"
                    style="@style/stats_superHero"/>

                <TextView

                    android:text="@string/stat_strength"
                    style="@style/stats_superHero" />

                <TextView
                    android:text="@string/stat_speed"
                    style="@style/stats_superHero" />

                <TextView
                    android:text="@string/stat_durability"
                    style="@style/stats_superHero" />

                <TextView
                    android:text="@string/stat_power"
                    style="@style/stats_superHero" />

                <TextView
                    android:text="@string/stat_combat"
                    style="@style/stats_superHero" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>